♻️ Resolve compile and style warnings on PolyglotDeployer and DirectoryWatcher